--- a/style/style.css
+++ b/style/style.css
@@ -20,10 +20,10 @@ h2 {
     padding: 5px 20px;
     display: block;
     color: steelblue;
-    border-radius: 20px;
-    box-shadow: 2px 2px 2px lightgray;
+    /* border-radius: 20px; */
+    /* box-shadow: 2px 2px 2px lightgray; */
     background: whitesmoke;
-    background: linear-gradient(white, whitesmoke);
+    /* background: linear-gradient(white, whitesmoke); */
     margin: 30px 0 20px 0;
     overflow-y: visible;
     height: 28px;
