Fixed the content pages margin / padding (inc. for mobile).

--- a/style/style.css
+++ b/style/style.css
@@ -150,7 +150,7 @@ div.page {
     visibility: hidden;
     /*margin: 90px 0 0 0;*/
     padding: 20px;
-    margin-top: 80px;
+    margin-top: 70px;
     z-index: 0;
     /*transition: margin-top 0.2s ease-in-out;*/
 }
@@ -378,19 +378,13 @@ h2.privacy::before{
     }
 
     div.page {
-        margin-top: 35px;
+        margin-top: 60px;
+        padding: 0px 20px;
     }
 
     div.header {
         padding: 5px;
-        background: white;
         text-align: center;
-        box-shadow: 0 2px 20px black;
-        z-index: 100;
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
         font-size: 0.8em;
         height: 40px;
     }
@@ -508,6 +502,7 @@ h2.privacy::before{
         max-width: 330px;
         top: 48px;
         box-shadow: 2px 10px 10px gray;
+        background: white;
     }
 
     li#menu:target ul[data-menu-for=container] {
